<resources>
    <string name="app_name">AppQuiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_test_your_knowledge">Vamos testar seus conhecimentos</string>
    <string name="search">Search…</string>
    <string name="available_quizzes">Available Quizzes</string>
    <string name="detail_quiz">Detail Quiz</string>
    <string name="brief_explanation_about_this_quiz">Brief explanation about this quiz</string>
    <string name="please_read_the_text_below_carefully_so_you_can_understand_it">Please read the text below carefully so you can understand it</string>
    <string name="tap_on_options_to_select_the_correct_answer">Tap on options to select the correct answer</string>
    <string name="tap_on_the_bookmark_icon_to_save_interesting_questions">Tap on the bookmark icon to save interesting questions</string>
    <string name="click_submit_if_you_are_sure_you_want_to_complete_all_the_quizzes">Click submit if you are sure you want to complete all the quizzes</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="question">Question</string>
    <string name="get">GET</string>
    <string name="point">Points</string>
    <string name="point_for_correct_answer">point for a correct answer</string>
    <string name="total_duration_of_the_quiz">Total duration of the quiz</string>
    <string name="rule_point">point awarded for a correct answer and no marks for a incorrect answer</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="submit_quiz">Submit Quiz</string>
    <string name="quiz">Quiz</string>
    <string name="next">Next</string>
    <string name="result">Quiz Results</string>
    <string name="yay_congratulations">Yay! Congratulations!</string>
    <string name="_0">0</string>
    <string name="on_the_main_screen_there_is_a_list_of_quizzes_that_you_can_take">On the main screen there is a list of quizzes that you can take</string>
    <string name="_1_hour_15_min">1 hour 15 min</string>
    <string name="_10_question">10 Question</string>
    <string name="ui_ux_design">UI UX Design</string>
    <string name="computer">#Computer</string>
    <string name="after_clicking_on_the_quiz_you_will_find_yourself_on_the_details_screen_there_you_need_to_click_on_the_start_quiz_button">After clicking on the quiz, you will find yourself on the Details screen, there you need to click on the Start Quiz button</string>
    <string name="on_the_quiz_screen_take_the_test_in_a_limited_time_complete_the_test_by_clicking_the_submit_quiz_button">On the quiz screen, take the test in a limited time. Complete the test by clicking the Submit Quiz button</string>
    <string name="what_is_the_meaning_of_ui_ux_design">What is the meaning of Design?</string>
    <string name="user_interfoce_and_user_experience">User Interfoce and User Experience</string>
    <string name="your_reward">Your reward</string>
    <string name="you_havent_answered_the_question">You have not answered the question!</string>
</resources>